--- a/ansible/roles/nerdfonts/defaults/main.yml
+++ b/ansible/roles/nerdfonts/defaults/main.yml
@@ -14,9 +14,9 @@ nerdfonts_fonts:
 #- fontname: '3270'
 #  caskname: 'font-3270-nerd-font'
 #  mono: 'font-3270-nerd-font-mono'
-#- fontname: 'AnonymousPro'
-#  caskname: 'font-anonymouspro-nerd-font'
-#  mono: 'font-anonymouspro-nerd-font-mono'
+- fontname: 'AnonymousPro'
+  caskname: 'font-anonymouspro-nerd-font'
+  mono: 'font-anonymouspro-nerd-font-mono'
 #- fontname: 'Arimo'
 #  caskname: ''
 #  mono: ''
@@ -41,9 +41,9 @@ nerdfonts_fonts:
 #- fontname: 'FantasqueSansMono'
 #  caskname: 'font-fantasquesansmono-nerd-font'
 #  mono: 'font-fantasquesansmono-nerd-font-mono'
-- fontname: 'FiraCode'
-  caskname: 'font-fira-code'
-  mono: 'font-fira-mono'
+#- fontname: 'FiraCode'
+#  caskname: 'font-firacode-nerd-font'
+#  mono: 'font-firacode-nerd-font-mono'
 #- fontname: 'FiraMono'
 #  caskname: 'font-firamono-nerd-font'
 #  mono: 'font-firamono-nerd-font-mono'
@@ -74,7 +74,7 @@ nerdfonts_fonts:
 #- fontname: 'Iosevka'
 #  caskname: 'font-iosevka-nerd-font'
 #  mono: 'font-iosevka-nerd-font-mono'
-- fontname: 'Hack'
+#- fontname: 'Hack'
   caskname: 'font-hack-nerd-font'
   mono: 'font-hack-nerd-font-mono'
 #- fontname: 'Lekton'
@@ -107,9 +107,9 @@ nerdfonts_fonts:
 #- fontname: 'RobotoMono'
 #  caskname: 'font-robotomono-nerd-font'
 #  mono: 'font-robotomono-nerd-font-mono'
-#- fontname: 'SourceCodePro'
-#  caskname: 'font-sourcecodepro-nerd-font'
-#  mono: 'font-sourcecodepro-nerd-font-mono'
+- fontname: 'SourceCodePro'
+  caskname: 'font-sourcecodepro-nerd-font'
+  mono: 'font-sourcecodepro-nerd-font-mono'
 #- fontname: 'ShareTechMono'
 #  caskname: 'font-sharetechmono-nerd-font'
 #  mono: 'font-sharetechmono-nerd-font'
@@ -128,3 +128,4 @@ nerdfonts_fonts:
 #- fontname: 'UbuntuMono'
 #  caskname: 'font-ubuntumono-nerd-font'
 #  mono: 'font-ubuntumono-nerd-font-mono'
+...
