--- a/ansible/roles/nerdfonts/tasks/main.yml
+++ b/ansible/roles/nerdfonts/tasks/main.yml
@@ -7,6 +7,7 @@
   - nerdfonts
   - nerdfonts_dependencies
 
-- name: "[main] Include {{ ansible_os_family }}-specific tasks"
-  include_tasks: "{{ ansible_os_family | lower }}.yml"
-  tags: nerdfonts
+#- name: "[main] Include {{ ansible_os_family }}-specific tasks"
+#  include_tasks: "{{ ansible_os_family | lower }}.yml"
+#  tags: nerdfonts
+...
