--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -44,8 +44,8 @@
       - vlc
       - vagrant
       - codium
-
     install_mac_packages:
+      - caskroom/cask/brew-cask
       - sshpass #https://raw.githubusercontent.com/kadwanev/bigboybrew/master/Library/Formula/sshpass.rb
       - watch
       - jq
