--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -13,6 +13,7 @@
   vars:
     install_all_package_updates: true
     repo_brew_tap: 
+      - homebrew/cask
       - homebrew/cask-fonts
     install_packages:
       - htop
@@ -45,7 +46,6 @@
       - vagrant
       - codium
     install_mac_packages:
-      - caskroom/cask/brew-cask
       - sshpass #https://raw.githubusercontent.com/kadwanev/bigboybrew/master/Library/Formula/sshpass.rb
       - watch
       - jq
