--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -46,6 +46,7 @@
       - vagrant
       - codium
     install_mac_packages:
+      - homebrew/cask
       - sshpass #https://raw.githubusercontent.com/kadwanev/bigboybrew/master/Library/Formula/sshpass.rb
       - watch
       - jq
