--- a/ansible/roles/dep/tasks/main.yml
+++ b/ansible/roles/dep/tasks/main.yml
@@ -8,11 +8,11 @@
     - ansible_facts['system'] == "Darwin"
 
 - file:
-    path: "{{home}}/go/bin"
+    path: "~{{ username }}/go/bin"
     state: directory
   become: true
   become_method: sudo
-  become_user: "{{account}}"
+  become_user: '{{ username }}'
   
 - name: Install dep Linux
   shell: curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
