--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -68,7 +68,7 @@
     - dep
     - nanorc
     #- packer
-    - terraform
+    #- terraform
     - awscli
     - azure-cli
     - crossplatform-package-manager
