--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -69,7 +69,7 @@
     - nanorc
     #- packer
     #- terraform
-    - awscli
+    #- awscli
     - azure-cli
     - crossplatform-package-manager
     - nerdfonts
