--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -70,7 +70,7 @@
     #- packer
     #- terraform
     #- awscli
-    - azure-cli
+    #- azure-cli
     - crossplatform-package-manager
     - nerdfonts
     - docker
