--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -16,9 +16,8 @@
       - homebrew/cask
       - homebrew/cask-fonts
     install_linux_packages:
-      #- zypper
       - stacer
-      - alacritty
+      #- alacritty
       - timeshift # Backup Linux
       - zsh
       - powertop
