--- a/ansible/roles/oh-my-zsh/tasks/install.yml
+++ b/ansible/roles/oh-my-zsh/tasks/install.yml
@@ -1,30 +1,29 @@
 ---
-
 - name: clone oh-my-zsh for users
   tags:
     # Suppress warning: [ANSIBLE0006] git used in place of git module
     # Git module doesn't allow us to set `core.autocrlf=input`.
     - skip_ansible_lint
   become: yes
-  become_user: '{{ username }}'
+  become_user: "{{ username }}"
   # core.autocrlf=input prevents https://github.com/robbyrussell/oh-my-zsh/issues/4402
-  command: 'git clone -c core.autocrlf=input --depth=1 https://github.com/robbyrussell/oh-my-zsh.git .oh-my-zsh'
+  command: "git clone -c core.autocrlf=input --depth=1 https://github.com/robbyrussell/oh-my-zsh.git .oh-my-zsh"
   args:
-    chdir: '~{{ username }}'
-    creates: '~{{ username }}/.oh-my-zsh'
+    chdir: "~{{ username }}"
+    creates: "~{{ username }}/.oh-my-zsh"
   with_items: "{{ users | map(attribute='username') | list }}"
   loop_control:
     loop_var: username
 
 - name: set permissions of oh-my-zsh for users
   become: yes
-  become_user: '{{ username }}'
+  become_user: "{{ username }}"
   file:
-    path: '~{{ username }}/.oh-my-zsh'
+    path: "~{{ username }}/.oh-my-zsh"
     # Prevent the cloned repository from having insecure permissions. Failing to do
     # so causes compinit() calls to fail with "command not found: compdef" errors
     # for users with insecure umasks (e.g., "002", allowing group writability).
-    mode: 'go-w'
+    mode: "go-w"
     recurse: yes
   with_items: "{{ users | map(attribute='username') | list }}"
   loop_control:
@@ -32,9 +31,9 @@
 
 - name: set default shell for users
   become: yes
-  become_user: '{{ username }}'
+  become_user: root
   user:
-    name: '{{ username }}'
+    name: "{{ username }}"
     shell: /bin/zsh
   with_items: "{{ users | map(attribute='username') | list }}"
   loop_control:
@@ -42,13 +41,13 @@
 
 - name: write .zshrc for users
   become: yes
-  become_user: '{{ user.username }}'
+  become_user: "{{ user.username }}"
   template:
     src: zshrc.j2
-    dest: '~{{ user.username }}/.zshrc'
+    dest: "~{{ user.username }}/.zshrc"
     backup: yes
-    mode: 'u=rw,go=r'
-  with_items: '{{ users }}'
+    mode: "u=rw,go=r"
+  with_items: "{{ users }}"
   loop_control:
     loop_var: user
-    label: '{{ user.username }}'
+    label: "{{ user.username }}"
