--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -69,7 +69,7 @@
     - packer
     - terraform
     - awscli
-    - azure-cli
+    #- azure-cli
     - crossplatform-package-manager
     - nerdfonts
     #- docker
