--- a/ansible/roles/crossplatform-package-manager/tests/test.yml
+++ b/ansible/roles/crossplatform-package-manager/tests/test.yml
@@ -4,7 +4,7 @@
     pre_tasks:
     - name: Update apt cache.
         apt: update_cache=yes cache_valid_time=600
-        when: ansible_os_family == 'Debian'
+        when: (ansible_os_family == 'Debian') or (ansible_os_family == 'Parrot OS')
         changed_when: false
 
     roles:
