--- a/ansible/roles/oh-my-zsh/tasks/main.yml
+++ b/ansible/roles/oh-my-zsh/tasks/main.yml
@@ -3,4 +3,4 @@
 
 - name: console setup for Debian family distributions
   include_tasks: debian-console-setup.yml
-  when: ansible_os_family == 'Debian'
+  when: (ansible_os_family == 'Debian') or (ansible_os_family == 'Parrot OS')
