Comment AWS Cli

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -68,7 +68,7 @@
     - nanorc
     - packer
     - terraform
-    - awscli
+    #- awscli
     #- azure-cli
     - crossplatform-package-manager
     - nerdfonts
