--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -33,7 +33,7 @@
       - vagrant
       - codium
     install_mac_packages:
-      - homebrew/cask
+      #- homebrew/cask
       - sshpass #https://raw.githubusercontent.com/kadwanev/bigboybrew/master/Library/Formula/sshpass.rb
       - watch
       - jq
