Cask not available Error: Unknown command: cask

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -39,14 +39,14 @@
       - jq
       - nano
     install_mac_cask_packages:
-      - virtualbox
-      - alacritty
-      - joplin
-      - font-fira-code
-      - font-hack-nerd-font
-      - vlc
-      - vagrant
-      - vscodium
+      #- virtualbox
+      #- alacritty
+      #- joplin
+      #- font-fira-code
+      #- font-hack-nerd-font
+      #- vlc
+      #- vagrant
+      #- vscodium
     install_packages:
       - htop
       - glances
