--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -50,7 +50,7 @@
     install_packages:
       - htop
       - glances
-      - golang
+      #- golang #Arch Issue
       - cmake
       - tmux
       - wget
