--- a/ansible/roles/nerdfonts/defaults/main.yml
+++ b/ansible/roles/nerdfonts/defaults/main.yml
@@ -75,8 +75,8 @@ nerdfonts_fonts:
 #  caskname: 'font-iosevka-nerd-font'
 #  mono: 'font-iosevka-nerd-font-mono'
 #- fontname: 'Hack'
-  caskname: 'font-hack-nerd-font'
-  mono: 'font-hack-nerd-font-mono'
+#  caskname: 'font-hack-nerd-font'
+#  mono: 'font-hack-nerd-font-mono'
 #- fontname: 'Lekton'
 #  caskname: 'font-lekton-nerd-font'
 #  mono: 'font-lekton-nerd-font-mono'
@@ -92,9 +92,9 @@ nerdfonts_fonts:
 #- fontname: 'Monoid'
 #  caskname: 'font-monoid-nerd-font'
 #  mono: 'font-monoid-nerd-font-mono'
-- fontname: 'Mononoki'
-  caskname: 'font-mononoki-nerd-font'
-  mono: 'font-mononoki-nerd-font-mono'
+#- fontname: 'Mononoki'
+#  caskname: 'font-mononoki-nerd-font'
+#  mono: 'font-mononoki-nerd-font-mono'
 #- fontname: 'MPlus'
 #  caskname: 'font-mplus-nerd-font'
 #  mono: 'font-mplus-nerd-font-mono'
@@ -107,9 +107,9 @@ nerdfonts_fonts:
 #- fontname: 'RobotoMono'
 #  caskname: 'font-robotomono-nerd-font'
 #  mono: 'font-robotomono-nerd-font-mono'
-- fontname: 'SourceCodePro'
-  caskname: 'font-sourcecodepro-nerd-font'
-  mono: 'font-sourcecodepro-nerd-font-mono'
+#- fontname: 'SourceCodePro'
+#  caskname: 'font-sourcecodepro-nerd-font'
+#  mono: 'font-sourcecodepro-nerd-font-mono'
 #- fontname: 'ShareTechMono'
 #  caskname: 'font-sharetechmono-nerd-font'
 #  mono: 'font-sharetechmono-nerd-font'
