Use Yay on Arch

--- a/ansible/roles/crossplatform-package-manager/tasks/install-remove-packages.yml
+++ b/ansible/roles/crossplatform-package-manager/tasks/install-remove-packages.yml
@@ -18,7 +18,7 @@
   - (ansible_os_family == 'Debian') or (ansible_os_family == 'Parrot OS')
 
 - name: Install AUR packages
-  command:  /usr/local/bin/packer -S --noconfirm --noedit {{ item }}
+  command:  /usr/bin/yay -S --noconfirm {{ item }}
   with_items: "{{ install_linux_packages }}"
   when: 
   - (ansible_os_family == 'Archlinux')
