--- a/ansible/roles/crossplatform-package-manager/tasks/install-package-updates.yml
+++ b/ansible/roles/crossplatform-package-manager/tasks/install-package-updates.yml
@@ -25,8 +25,8 @@
   when: 
   - (ansible_os_family == 'Debian') or (ansible_os_family == 'Parrot OS')
 
-- name: Install AUR packages
-  command:  /usr/local/bin/packer -S --noconfirm --noedit {{ item }}
+- name: Update AUR packages
+  command:  /usr/bin/yay -S --noconfirm {{ item }}
   with_items: "{{ update_packages }}"
   when: 
   - (ansible_os_family == 'Archlinux')
