Fix mac only install

--- a/ansible/roles/crossplatform-package-manager/tasks/install-remove-packages.yml
+++ b/ansible/roles/crossplatform-package-manager/tasks/install-remove-packages.yml
@@ -44,10 +44,9 @@
 
 - name: Install homebrew mac only packages
   homebrew:
-    #name: '{{ item }}'
-    name: "{{ install_mac_packages }}"
+    name: '{{ item }}'
     state: latest
-  #loop: "{{ install_mac_packages }}"
+  with_items: "{{ install_mac_packages }}"
   when: 
     - ansible_facts['system'] == "Darwin"
 
