--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -42,13 +42,13 @@
       - nano
       - golang
       #- vlc
-    #install_mac_cask_packages:
-    #- virtualbox
-    #- alacritty
-    #- joplin
-    #- font-fira-code
-    #- font-hack-nerd-font
-    #- vlc
+    install_mac_cask_packages:
+      #- virtualbox
+      #- alacritty
+      #- joplin
+      #- font-fira-code
+      #- font-hack-nerd-font
+      - vlc
     #- vagrant
     #- vscodium
     install_packages:
