--- a/ansible/roles/crossplatform-package-manager/tasks/install-remove-packages.yml
+++ b/ansible/roles/crossplatform-package-manager/tasks/install-remove-packages.yml
@@ -50,7 +50,7 @@
     - ansible_facts['system'] == "Darwin"
 
 - name: Install homebrew cask packages
-  homebrew:
+  homebrew_cask:
     name: "{{ item }}"
     state: present
     #upgrade_all: "yes"
