--- a/ansible/roles/oh-my-zsh/tasks/install.yml
+++ b/ansible/roles/oh-my-zsh/tasks/install.yml
@@ -30,9 +30,10 @@
     loop_var: username
 
 - name: Change zsh dir permission
-become: yes
-  directory:
+  become: yes
+  file:
     path: /usr/local/share/zsh
+    state: directory
     owner: "root"
     group: "staff"
     mode: 0755
