Fix zsh dir permissions

--- a/ansible/roles/oh-my-zsh/tasks/install.yml
+++ b/ansible/roles/oh-my-zsh/tasks/install.yml
@@ -31,7 +31,7 @@
 
 - name: Change zsh dir permission
   become: yes
-  
+  become_user: "{{ username }}"
   file:
     path: /usr/local/share/zsh
     state: directory
