--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -44,7 +44,7 @@
     install_mac_cask_packages:
       - virtualbox
       - alacritty
-      - joplin
+      #- joplin
       - font-fira-code
       - font-hack-nerd-font
       - vlc
