--- a/ansible/roles/oh-my-zsh/tasks/install.yml
+++ b/ansible/roles/oh-my-zsh/tasks/install.yml
@@ -6,6 +6,8 @@
   ansible.builtin.git:
     repo: https://github.com/robbyrussell/oh-my-zsh.git
     dest: /home/{{ username }}/.oh-my-zsh
+    clone: yes
+    update: yes
   with_items: "{{ users | map(attribute='username') | list }}"
   loop_control:
     loop_var: username
