--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -99,7 +99,7 @@
     - role: vscodium
       users:
         - username: "{{ ansible_user_id }}"
-          visual_studio_code_extensions:
+          #visual_studio_code_extensions:
           visual_studio_code_settings_overwrite: yes
           visual_studio_code_settings: {
             "files.autoSave": "afterDelay"
