Add mac hack fonts

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -48,6 +48,7 @@
       - jq
       - nano
       - golang
+      - font-hack
     install_mac_cask_packages:
       - virtualbox
       - alacritty
