--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -72,12 +72,11 @@
   roles:
     - kubectx
     - kubectl
-    #- kitty
     - dep
     - nanorc
     - packer
     - terraform
-    #- awscli
+    - awscli
     #- azure-cli
     - crossplatform-package-manager
     - nerdfonts
