--- a/ansible/roles/oh-my-zsh/tasks/install.yml
+++ b/ansible/roles/oh-my-zsh/tasks/install.yml
@@ -13,7 +13,7 @@
   become: yes
   become_user: "{{ username }}"
   ansible.builtin.git:
-    repo: https://github.com/robbyrussell/oh-my-zsh.git
+    repo: git@github.com:ohmyzsh/ohmyzsh.git
     dest: ~/.oh-my-zsh
     clone: yes
     update: yes
