--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -44,7 +44,7 @@
       - vlc
       - vagrant
     install_mac_packages:
-      - sshpass #https://raw.githubusercontent.com/kadwanev/bigboybrew/master/Library/Formula/sshpass.rb
+      #- sshpass #https://raw.githubusercontent.com/kadwanev/bigboybrew/master/Library/Formula/sshpass.rb
       - watch
       - jq
       - nano
